# OOP_lab_3

./: .gitignore  CMakeLists.txt  README.md
include/: Figure.hpp  FigureArray.hpp  Point.hpp  PointArray.hpp  Rectangle.hpp  Square 2.hpp  Triangle.hpp
src/: Figure.cpp  FigureArray.cpp  PointArray.cpp  Rectangle.cpp  Square 2.cpp  Triangle 2.cpp  main.cpp
tests/: test_figure.cpp
